Fixing by notes